# data-secure-solutions

./: .env  pyproject.toml  requirements.txt  secure_encryption_app.py
.devcontainer/: devcontainer.json
